<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#565C5C"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/biker_login_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/biker_login_image"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/Biker_Login_Prompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.49"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:src="@drawable/biker_login_image2" />

    <TextView
        android:id="@+id/Biker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/biker"
        android:textColor="#EFBC2F"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="@+id/biker_login_image"
        app:layout_constraintEnd_toEndOf="@+id/biker_login_image"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/biker_login_image"
        app:layout_constraintTop_toTopOf="@+id/biker_login_image"
        app:layout_constraintVertical_bias="0.974" />

    <TextView
        android:id="@+id/biker_Login_Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="185dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/please_sign_in_to_continue"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/parent_login_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Biker_Login_Prompt" />

    <TextView
        android:id="@+id/Biker_Login_Prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="270dp"
        android:contentDescription="@string/biker_login_text"
        android:fontFamily="@font/open_sans"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/biker_Login_Description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/parent_login_email"
        android:layout_width="316dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/parent_login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/biker_Login_Description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/username_or_email_address" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/parent_login_password"
        android:layout_width="316dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="81dp"
        app:layout_constraintBottom_toTopOf="@+id/biker_login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parent_login_email"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#1B1919"
            tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/biker_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="180dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parent_login_password"
        tools:ignore="DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>